syntax = "proto3";
option go_package = ".;proto";
//进入目录然后使用protoc -I . user.proto --go_out=plugins=grpc:.命令进行文件的生成
service  User{
  rpc GetUserList(PageInfo) returns (UserListRespons);//用户列表
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);//通过用户的手机号查询
  rpc GetUserById(IdRequest) returns (UserInfoResponse);//通过id查询
  rpc CreateUser(CreateUserinfo) returns (UserInfoResponse);//创建用户
  rpc UpdateUser(UpdateUserInfo) returns (Empty);//更新用户
  rpc CheckPassword(PasswordCheckInfo)returns(CheckReponse);//密码检查
}

message PageInfo{
    uint32 pn = 1;
    uint32 pSize = 2;
}

message CheckReponse{
  bool success=1;
}
message PasswordCheckInfo{
  string password =1;
  string encrytedPassword =2;
}

message Empty{

}

message UpdateUserInfo{
  int32 id =1;
  string nickName =2;
  uint64 birthday =3;
  string gender = 4;

}
message CreateUserinfo{
  string nickName =1;
  string passWord =2;
  string mobile =3;
}
message IdRequest {
  int32 id = 1;
}

message MobileRequest{
  string mobile = 1;
}
message UserInfoResponse{
  int32  id =1 ;
  string password =2;
  string mobile =3;
  string nickName =4;
  uint64 birthday =5;
  string gender = 6;
  int32 role =7;
}
message UserListRespons{
  int32 total = 1;
  repeated UserInfoResponse data =2;
}